--- a/angular/src/app/modules/popup/pages/popup/popup.component.scss
+++ b/angular/src/app/modules/popup/pages/popup/popup.component.scss
@@ -1,48 +1,89 @@
-.popup{
-  background-color: #4f6ae3;
+.popup {
+  background-color: #4562e6;
   padding: 20px;
   width: 250px;
 
-  &__title{
+  &__stop {
+    --key-text-color: #e63a3a;
+    --docsearch-key-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff, 0 1px 2px 1px rgba(222, 58, 58, 0.4);
+    --docsearch-key-gradient: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
+    border: none;
+    background: var(--docsearch-key-gradient);
+    border-radius: 3px;
+    box-shadow: var(--docsearch-key-shadow);
+    color: var(--key-text-color);
+    height: 4em;
+    width: 5em;
+    text-align: center;
+    padding: 0.6em;
+    margin: 0 0.6em;
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1em;
+    min-width: 1em;
+    line-height: 1em;
+    user-select: none;
+
+    &:hover {
+      cursor: pointer;
+      box-shadow: 1px 1px 2px 1px rgba(30, 35, 90, 0.4);
+    }
+  }
+
+  &__position {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+
+    button {
+      margin: auto;
+    }
+    svg {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  &__title {
     color: white;
     text-align: center;
   }
 
-  &__times{
+  &__times {
     margin-top: 15px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 15px;
 
-      &-time{
-          --key-text-color: #5c5c5c;
-          --docsearch-key-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4);
-          --docsearch-key-gradient: linear-gradient(-225deg,#d5dbe4,#f8f8f8);
-          border: none;
-          background: var(--docsearch-key-gradient);
-          border-radius: 3px;
-          box-shadow: var(--docsearch-key-shadow);
-          color: var(--key-text-color);
-          height: 2.5em;
-          width: 4em;
-          text-align: center;
-          padding: 0.6em;
-          margin: 0 0.6em;
-          display: inline-block;
-          text-transform: uppercase;
-          font-weight: bold;
-          font-size: 1em;
-          min-width: 1em;
-          line-height: 1em;
-          user-select: none;
+    &-time {
+      --key-text-color: #5c5c5c;
+      --docsearch-key-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff, 0 1px 2px 1px rgba(30, 35, 90, 0.4);
+      --docsearch-key-gradient: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
+      border: none;
+      background: var(--docsearch-key-gradient);
+      border-radius: 3px;
+      box-shadow: var(--docsearch-key-shadow);
+      color: var(--key-text-color);
+      height: 2.5em;
+      width: 4em;
+      text-align: center;
+      padding: 0.6em;
+      margin: 0 0.6em;
+      display: inline-block;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 1em;
+      min-width: 1em;
+      line-height: 1em;
+      user-select: none;
 
-          &:hover{
-            cursor: pointer;
-            box-shadow: 1px 1px 2px 1px rgba(30,35,90,0.4);
-          }
-
+      &:hover {
+        cursor: pointer;
+        box-shadow: 1px 1px 2px 1px rgba(30, 35, 90, 0.4);
       }
-
+    }
   }
 }
